--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 body {
 
-  font-family: Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   background-color: #f4f4f4;
   padding: 20px;
 
@@ -25,12 +25,19 @@ div {
 
 }
 
+h1 {
+
+  font-size: 45px;
+
+}
+
 
 h2 {
 
   font-size: 24px;
   color: #333;
   margin-bottom: 20px;
+  color: green;
 
 }
 
@@ -103,14 +110,15 @@ li {
 
 li h3 {
 
-  font-size: 20px;
+  font-size: 26px;
   color: #333;
+  margin-bottom: 10px;
 
 }
 
 li p {
 
-  font-size: 14px;
+  font-size: 18px;
   color: #666;
   margin-bottom: 10px;
 
@@ -129,8 +137,9 @@ li img {
 button {
 
   background-color: #FF4136;
+  margin-top: 10px;
   padding: 8px 15px;
-  font-size: 14px;
+  font-size: 18px;
   cursor: pointer;
   border: none;
   border-radius: 4px;
